simpler index.html for testing

--- a/index.html
+++ b/index.html
@@ -1,54 +1,1 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-
-<link rel="stylesheet" type="text/css" href="static/css/style2.css">
-
-<h2 id='data-title'>Middle Cedar N vs $ frontier</h2>
-
-
-<!-- Begin Visualization Code -->
-<div id='mcviz'>
-
-<!-- Menu Bar -->
-<div id='menu-bar'>
-	<div id='value-select'>
-	Value
-	<select></select>
-	</div>
-</div> 
-<!-- End: menu bar -->
-
-<!-- CHARTS -->
-<div id='chart-holder' class='_dev'>
-
-<div id='frontier-plot'></div>
-
-<div id='point-report'></div>
-
-<div id='map-box'></div>
-
-<div id='pie-plot'></div>
-
-</div>
-<!-- End: Chart holder -->
-
-</div>
-<!-- End: visualization code -->
-
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/
-1.0.7/queue.min.js">
-</script>
-<script src="static/js/mcviz_core.js"></script>
-<script src="static/js/mcviz_frontier.js"></script>
-<!-- <script src="static/js/mcviz_point_report.js"></script> -->
-<script src="static/js/mcviz_map_box.js"></script>
-
-<script src="static/js/mcviz_pie_plot.js"></script>
-
-<script src="static/js/mcviz_main.js"></script>
-
-
-
-
+hello world, again
