--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="static/css/style2.css">
+<link rel="stylesheet" type="text/css" href="static/css/style.css">
 
 <h2 id='data-title'>Middle Cedar N vs $ frontier</h2>
 
@@ -35,7 +35,7 @@
 </div>
 <!-- End: visualization code -->
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script
         src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/
 1.0.7/queue.min.js">
