start of table development

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </script>
 <script src="static/js/mcviz_core.js"></script>
 <script src="static/js/mcviz_frontier.js"></script>
-<!-- <script src="static/js/mcviz_point_report.js"></script> -->
+<script src="static/js/mcviz_point_report.js"></script>
 <script src="static/js/mcviz_map_box.js"></script>
 
 <script src="static/js/mcviz_pie_plot.js"></script>
