enable different frontier selections

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
-
 <div id='data-choice'>
-Frontier: <select></select>
+	Frontier: 
+	<select></select>
 </div>
 
 <h2 id='data-title'> </h2>
