--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Menu Bar -->
 <div id='menu-bar'>
 	<div id='value-select'>
-	Y-axis Value
+	Y-axis value
 	<select></select>
 	</div>
 </div> 
