add documentation page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-
+<head>
 <link rel="stylesheet" type="text/css" href="static/css/style.css">
+</head>
 
 <div id='data-choice'>
 	Frontier: 
 	<select></select>
+</div>
+
+<div id='doc-link'>
+<a href="static/html/write-up.html">documentation</a>
 </div>
 
 <h2 id='data-title'> </h2>
